# euler

./: .gitignore  README.md  main.py  parse_pdf.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
app/agents/: base_agent.py  wiskunde_expert_agent.py
app/ingestion/: __init__.py  clear_supabase_table.py  pdf2md.py  process_and_store_md.py  split_pdf.py
app/prompts/: pdf_processer.prompt.txt  uitleg_prompt.txt  vragen_prompt.txt  wiskunde_expert.prompt.txt
app/utils/: __init__.py  embedding.py  llms.py  logging_config.py  prompt_loader.py  supabase_client.py
configs/: config.yaml
configs/mode/: delete_data.yaml  parse_and_store.yaml  parse_pdf.yaml  serve_api.yaml  split_pdf.yaml  test_agent.yaml
frontend/: streamlit_app.py
infra/: .dockerignore  Dockerfile
infra/supabase/: init_documents_schema.sql
md_db/: leerboek_kgt_2.pdf.md
outputs/2025-03-29/15-24-04/.hydra/: hydra.yaml
outputs/2025-03-29/15-24-30/.hydra/: hydra.yaml
outputs/2025-03-29/15-24-46/.hydra/: config.yaml  hydra.yaml
outputs/2025-03-29/15-25-49/.hydra/: config.yaml  hydra.yaml
outputs/2025-03-29/15-26-18/.hydra/: hydra.yaml
outputs/2025-03-29/15-30-15/.hydra/: hydra.yaml
outputs/2025-03-29/15-32-07/.hydra/: hydra.yaml
outputs/2025-03-29/15-33-15/.hydra/: hydra.yaml
outputs/2025-03-29/15-36-02/.hydra/: hydra.yaml
outputs/2025-03-29/15-36-13/.hydra/: hydra.yaml
outputs/2025-03-29/15-37-29/.hydra/: config.yaml  hydra.yaml
outputs/2025-03-29/15-38-56/.hydra/: hydra.yaml
outputs/2025-03-29/15-39-32/.hydra/: hydra.yaml
outputs/2025-03-29/15-41-36/.hydra/: hydra.yaml
outputs/2025-04-01/10-59-13/.hydra/: hydra.yaml
outputs/2025-04-01/11-00-57/.hydra/: hydra.yaml
outputs/2025-04-01/11-05-39/.hydra/: hydra.yaml
outputs/2025-04-01/12-02-56/.hydra/: hydra.yaml
outputs/2025-04-01/12-07-02/.hydra/: hydra.yaml
outputs/2025-04-01/12-18-43/.hydra/: hydra.yaml
outputs/2025-04-01/12-22-16/.hydra/: hydra.yaml
outputs/2025-04-01/12-23-58/.hydra/: hydra.yaml
outputs/2025-04-01/12-36-08/.hydra/: hydra.yaml
outputs/2025-04-01/12-37-30/.hydra/: hydra.yaml
outputs/2025-04-01/18-37-20/.hydra/: hydra.yaml
outputs/2025-04-01/18-38-11/.hydra/: config.yaml  hydra.yaml
outputs/2025-04-01/18-39-09/.hydra/: hydra.yaml
outputs/2025-04-01/18-40-54/.hydra/: hydra.yaml
outputs/2025-04-01/18-44-57/.hydra/: hydra.yaml
outputs/2025-04-02/08-42-56/.hydra/: hydra.yaml
outputs/2025-04-02/11-19-36/.hydra/: config.yaml  hydra.yaml
outputs/2025-04-02/11-21-18/.hydra/: hydra.yaml
outputs/2025-04-02/11-23-15/.hydra/: hydra.yaml
outputs/2025-04-02/11-25-50/.hydra/: hydra.yaml
outputs/2025-04-02/11-26-07/.hydra/: hydra.yaml
outputs/2025-04-02/11-26-29/.hydra/: hydra.yaml
outputs/2025-04-02/11-51-16/.hydra/: hydra.yaml
outputs/2025-04-02/11-56-10/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-04-03/20-35-43/.hydra/: hydra.yaml
outputs/2025-04-03/20-36-34/.hydra/: hydra.yaml
outputs/2025-04-03/20-47-27/.hydra/: hydra.yaml
outputs/2025-04-03/20-58-55/.hydra/: hydra.yaml
outputs/2025-04-03/21-00-33/.hydra/: hydra.yaml
outputs/2025-04-03/21-02-41/.hydra/: hydra.yaml
outputs/2025-04-03/21-10-06/.hydra/: hydra.yaml
outputs/2025-04-03/21-11-20/.hydra/: hydra.yaml
outputs/2025-04-03/21-13-29/.hydra/: hydra.yaml
outputs/2025-04-03/21-17-05/.hydra/: hydra.yaml
outputs/2025-04-08/09-20-22/.hydra/: hydra.yaml
outputs/2025-04-08/09-24-29/.hydra/: hydra.yaml
outputs/2025-04-08/09-29-07/.hydra/: hydra.yaml
outputs/2025-04-08/09-36-15/.hydra/: config.yaml  hydra.yaml
outputs/2025-04-08/09-37-40/.hydra/: hydra.yaml
outputs/2025-04-08/09-37-56/.hydra/: hydra.yaml
outputs/2025-04-08/09-51-22/.hydra/: hydra.yaml
outputs/2025-04-08/10-36-55/.hydra/: hydra.yaml
outputs/2025-04-08/10-41-46/.hydra/: hydra.yaml
outputs/2025-04-08/11-36-07/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-04-08/16-02-13/.hydra/: hydra.yaml
outputs/2025-04-08/16-45-19/.hydra/: hydra.yaml
outputs/2025-04-08/16-45-50/.hydra/: hydra.yaml
outputs/2025-04-08/16-53-46/.hydra/: hydra.yaml
outputs/2025-04-08/16-54-40/.hydra/: hydra.yaml
outputs/2025-04-08/16-55-43/.hydra/: hydra.yaml
outputs/2025-04-08/16-57-25/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-04-08/16-57-40/.hydra/: hydra.yaml
outputs/2025-04-08/16-58-02/.hydra/: config.yaml  hydra.yaml
outputs/2025-04-08/17-33-35/.hydra/: config.yaml  hydra.yaml
outputs/2025-04-08/17-33-55/.hydra/: config.yaml  hydra.yaml
outputs/2025-04-08/17-42-44/.hydra/: hydra.yaml
scripts/: activate_venv.sh  cleanup_ollama.sh  run_ollama_server.sh  start_model.sh
src/agent/: RAG.py  rag.py
src/ingestion/: pdf2md.py  process_and_store_md.py  process_md  split_pdf.py
src/utils/: embedding.py  llms.py  logging_config.py
tests/: test_pdf2md.py  test_process_and_store_md.py
(+30 files in other folders)
